Fix iframe of flower responsiveness- now it resizes only on mobile

--- a/styles.css
+++ b/styles.css
@@ -419,3 +419,19 @@ nav {
   height: 100%;
   padding-bottom: 30px;
 }
+
+@media (max-width: 600px) {
+.responsive-flower {
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  position: relative;
+}
+
+.responsive-flower iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 30px;
+}
+}
